fix date displaying

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -15,7 +15,7 @@
                             <span class="meta">
                                 Posted by
                                 <a href="#!"><%= singlePost.username %></a>
-                                on <%= singlePost.date.toDateString() %>
+                                on <%= singlePost.date.toLocaleString() %>
                             </span>
                         </div>
                     </div>
