--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,7 +37,7 @@
                             <p class="post-meta">
                                 Posted by
                                 <a href="#!"><%= blogPosts[i].username %></a>
-                                on <%= blogPosts[i].date.toDateString() %>
+                                on <%= blogPosts[i].date.toLocaleString() %>
                             </p>
                         </div>
                         <!-- Divider-->
